docs/7.56/md/abenalias_glosry.md
---
title: "alias_glosry"
description: |
  alias_glosry - ABAP 7.56 language reference documentation
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenalias_glosry.htm"
abapFile: "abenalias_glosry.htm"
keywords: ["select", "do", "if", "try", "class", "data", "types", "internal-table", "abenalias", "glosry"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP Glossary](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_glossary.htm) → 

alias name

A name that can or must be used instead of the actual name of something. The following alias names can be defined in ABAP:

-   The statement [ALIASES](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapaliases.htm) can be used to declare an alias name for an [interface component](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeninterface_component_glosry.htm "Glossary Entry") in a [class](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenclass_glosry.htm "Glossary Entry") or in a [compound interface](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencompound_interface_glosry.htm "Glossary Entry").
-   The addition [ALIAS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abaptypes_primary_key.htm) can be used to specify an alias for the [primary table key](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenprimary_key_glosry.htm "Glossary Entry") and [secondary table key](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensecondary_key_glosry.htm "Glossary Entry") when declaring an [internal table](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeninternal_table_glosry.htm "Glossary Entry").
-   In [ABAP SQL](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_glosry.htm "Glossary Entry"), the addition AS can be used to define aliases for columns of the result set in a [SELECT](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_list.htm) list or for data sources in the [FROM](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapfrom_clause.htm) clause.
-   In [ABAP CDS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_cds_glosry.htm "Glossary Entry"), the addition AS can be used to define aliases for elements in the SELECT list or for [CDS associations](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_association_glosry.htm "Glossary Entry").